--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -1,22 +1,26 @@
-<h1>Listing devices</h1>
-
-<table>
+<%- model_class = Device -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Property</th>
-      <th>Devinfo</th>
-      <th>Label</th>
-      <th>User name</th>
-      <th>Rental date</th>
-      <th>Return date</th>
-      <th colspan="3"></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:name) %></th>
+      <th><%= model_class.human_attribute_name(:property_id) %></th>
+      <th><%= model_class.human_attribute_name(:devinfo_id) %></th>
+      <th><%= model_class.human_attribute_name(:label) %></th>
+      <th><%= model_class.human_attribute_name(:user_name) %></th>
+      <th><%= model_class.human_attribute_name(:rental_date) %></th>
+      <th><%= model_class.human_attribute_name(:return_date) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @devices.each do |device| %>
       <tr>
+        <td><%= link_to device.id, device_path(device) %></td>
         <td><%= device.name %></td>
         <td><%= device.property_id %></td>
         <td><%= device.devinfo_id %></td>
@@ -24,14 +28,21 @@
         <td><%= device.user_name %></td>
         <td><%= device.rental_date %></td>
         <td><%= device.return_date %></td>
-        <td><%= link_to 'Show', device %></td>
-        <td><%= link_to 'Edit', edit_device_path(device) %></td>
-        <td><%= link_to 'Destroy', device, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%=l device.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_device_path(device), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      device_path(device),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Device', new_device_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_device_path,
+            :class => 'btn btn-primary' %>
