--- a/app/views/devices/show.html.erb
+++ b/app/views/devices/show.html.erb
@@ -1,39 +1,33 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Device -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <strong>Name:</strong>
-  <%= @device.name %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
+  <dd><%= @device.name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:property_id) %>:</strong></dt>
+  <dd><%= @device.property_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:devinfo_id) %>:</strong></dt>
+  <dd><%= @device.devinfo_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:label) %>:</strong></dt>
+  <dd><%= @device.label %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:user_name) %>:</strong></dt>
+  <dd><%= @device.user_name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:rental_date) %>:</strong></dt>
+  <dd><%= @device.rental_date %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:return_date) %>:</strong></dt>
+  <dd><%= @device.return_date %></dd>
+</dl>
 
-<p>
-  <strong>Property:</strong>
-  <%= @device.property_id %>
-</p>
-
-<p>
-  <strong>Devinfo:</strong>
-  <%= @device.devinfo_id %>
-</p>
-
-<p>
-  <strong>Label:</strong>
-  <%= @device.label %>
-</p>
-
-<p>
-  <strong>User name:</strong>
-  <%= @device.user_name %>
-</p>
-
-<p>
-  <strong>Rental date:</strong>
-  <%= @device.rental_date %>
-</p>
-
-<p>
-  <strong>Return date:</strong>
-  <%= @device.return_date %>
-</p>
-
-<%= link_to 'Edit', edit_device_path(@device) %> |
-<%= link_to 'Back', devices_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              devices_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_device_path(@device), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              device_path(@device),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
