--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -1,20 +1,21 @@
 <%- model_class = Device -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+  <h1>デバイス一覧</h1>
 </div>
 <table class="table table-striped">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:name) %></th>
-      <th><%= model_class.human_attribute_name(:property_id) %></th>
-      <th><%= model_class.human_attribute_name(:devinfo_id) %></th>
-      <th><%= model_class.human_attribute_name(:label) %></th>
-      <th><%= model_class.human_attribute_name(:user_name) %></th>
-      <th><%= model_class.human_attribute_name(:rental_date) %></th>
-      <th><%= model_class.human_attribute_name(:return_date) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      <th><%= model_class.human_attribute_name(:ID) %></th>
+      <th><%= model_class.human_attribute_name(:デバイス名) %></th>
+      <th><%= model_class.human_attribute_name(:資産管理番号) %></th>
+      <th><%= model_class.human_attribute_name(:情報機器・識別文字列) %></th>
+      <th><%= model_class.human_attribute_name(:ラベル) %></th>
+      <th><%= model_class.human_attribute_name(:ユーザ名) %></th>      
+      <th><%= model_class.human_attribute_name(:購入日) %></th>
+      <th><%= model_class.human_attribute_name(:貸出日) %></th>
+      <th><%= model_class.human_attribute_name(:返却日) %></th>
+      <th><%= model_class.human_attribute_name(:登録日) %></th>
+      <th><%=t '.actions', :default => t("操作") %></th>
     </tr>
   </thead>
   <tbody>
@@ -26,16 +27,17 @@
         <td><%= device.devinfo_id %></td>
         <td><%= device.label %></td>
         <td><%= device.user_name %></td>
+        <td><%= device.acquisition_date %></td>        
         <td><%= device.rental_date %></td>
         <td><%= device.return_date %></td>
-        <td><%=l device.created_at %></td>
+        <td><%= device.created_at %></td>
         <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+          <%= link_to t('.edit', :default => t("編集")),
                       edit_device_path(device), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+          <%= link_to t('.destroy', :default => t("削除")),
                       device_path(device),
                       :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :data => { :confirm => t('.confirm', :default => t("確認", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
         </td>
       </tr>
@@ -43,6 +45,6 @@
   </tbody>
 </table>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
+<%= link_to t('.new', :default => t("登録")),
             new_device_path,
             :class => 'btn btn-primary' %>
