--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "DeviceManagementTool" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "デバイス管理" %></title>
     <%= csrf_meta_tags %>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
@@ -46,10 +46,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">デバイス管理</a>
+          <a class="brand" href="/devices">デバイス管理</a>
           <div class="container-fluid nav-collapse">
             <ul class="nav">
-              <li><%= link_to "Home", "/"  %></li>
+              <li><%= link_to "Home", "/devices"  %></li>
               <li><%= link_to "MyPage", "/path2"  %></li>
             </ul>
           </div><!--/.nav-collapse -->
