--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -2,6 +2,19 @@
 <div class="page-header">
   <h1>デバイス一覧</h1>
 </div>
+
+
+<div>
+  <%= search_form_for @search do |f| %>
+    <%= f.label :user_name_cont, 'ユーザ名' %>
+    <%= f.text_field :user_name_cont %>
+
+
+    <%= f.submit '検索する', :class =>'btn btn-primary'%>
+
+  <% end %>
+</div>
+
 <table class="table table-striped">
   <thead>
     <tr>
@@ -37,7 +50,7 @@
           <%= link_to t('.destroy', :default => t("削除")),
                       device_path(device),
                       :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("確認", :default => 'Are you sure?')) },
+                      :data => { :confirm => t('.confirm', :default => t("確認", :default => '本当に削除しますか？')) },
                       :class => 'btn btn-mini btn-danger' %>
         </td>
       </tr>
@@ -45,6 +58,6 @@
   </tbody>
 </table>
 
-<%= link_to t('.new', :default => t("登録")),
+<%= link_to t('.new', :default => t("新規登録")),
             new_device_path,
             :class => 'btn btn-primary' %>
