フッターの位置修正

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,11 +66,14 @@
         </div>
       </div><!--/row-->
 
-      <footer>
-        <p>&copy; freee 2014</p>
-      </footer>
+
 
     </div> <!-- /container -->
 
   </body>
+
+  <footer>
+    <br />
+    <p align="center">&copy; freee 2014</p>
+  </footer>
 </html>
